[project]
name = "comfyui-vhs-enhance"
description = "VideoHelperSuite + navegador de ficheros de servidor para cargar vídeo por ruta (oveCom fork)"
version = "1.7.9"
license = { file = "LICENSE" }
dependencies = ["opencv-python", "imageio-ffmpeg"]

[project.urls]
Repository = "https://github.com/jesusluque/ComfyUI-VHS-Enhance"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "jesusluque"
DisplayName = "ComfyUI-VHS-Enhance"
Icon = ""
